...
    <string name="theme_setting_s">Some settings related to interface or color</string>
    <string name="other_setting">Other settings</string>
    <string name="other_setting_s">Some function-related settings</string>
    <string name="about">About</string>
    <string name="donate">Donations</string>
    <string name="exit">Exit</string>
    <string name="exit_no_save">It has not been saved. Do you want to continue editing?</string>
    <string name="read_style">Book styles</string>
    <string name="version">Version</string>
    <string name="local">Local</string>
    <string name="search">Search</string>
    <string name="config_search_empty">No matching settings</string>
    <string name="help_search_prev">Previous match</string>
...
    <string name="eink_theme">E-Ink</string>
    <string name="eink_theme_desc">Optimization for E-ink devices</string>
    <string name="get_storage_per">requires storage permission</string>
    <string name="double_click_exit">Tap again to exit the program</string>
    <string name="import_book_per">Import local books requires storage permission</string>
    <string name="network_connection_unavailable">Network connection is not available</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">OK</string>
    <string name="sure_del">Are you sure to delete it?</string>
    <string name="sure_del_any">Are you sure to delete %s?</string>
    <string name="sure_del_all_book">Are you sure to delete all books？</string>
    <string name="sure_del_download_book">Do you want to delete the downloaded book chapters at the same time?</string>
    <string name="qr_per">Scan QR code requires Camera permissions</string>
...
    <string name="manga_radio_center">居中</string>
    <string name="enable_manga_horizontal_scroll">水平滚动</string>
    <string name="manga_color_filter">滤镜</string>
    <string name="hide_manga_title">隐藏漫画列表标题</string>
    <string name="refresh_explore">刷新发现</string>
    <string name="padding_display_cutouts">Padding display cutouts</string>
    <string name="read_aloud_pause_resume">Pause/Resume Speech</string>
    <string name="manga_epaper">墨水屏</string>
    <string name="manga_epaper_stting">墨水屏设置</string>
    <string name="manga_epaper_value">阈值</string>
    <string name="disable_horizontal_page_snap">禁用水平翻页效果</string>
    <string name="enable_manga_gray">开启图片灰色</string>
    <string name="play_mode">播放模式</string>
...
